--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.miage.jiarchi.miagics"
+    package="com.miage.jirachi.miagics"
     android:versionCode="1"
     android:versionName="1.0" >
 
