--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="libs/bodyeditor-loader-sources.jar"/>
 	<classpathentry kind="lib" path="libs/bodyeditor-loader.jar"/>
+	<classpathentry kind="lib" path="libs/kryonet-2.18-all.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
